@@ -26,6 +26,7 @@ Added support for unions in all places where structs work
 Added support for the `restrict` and `const` pointer type qualifiers.
 Added support for variadic functions.
 Added support for multiple global variable declarations per statement
+Added initial very hacky support for casting after dereferencing
 
 ** Changed
 Space for local variables in functions is now allocated up front
